tests/init/neg/default-this.check
-- Error: tests/init/neg/default-this.scala:9:8 ------------------------------------------------------------------------
9 |        compare() // error
  |        ^^^^^^^
  |     Cannot prove that the value is fully initialized. May only use initialized value as arguments. Calling trace:
  |      -> val result = updateThenCompare(5)	[ default-this.scala:11 ]
